force-app/main/default/objects/Command_Snippet__c/Command_Snippet__c.object-meta.xml
<CustomObject>
    <label>Command Snippet</label>
    <nameField>
        <displayFormat>CS-{0000}</displayFormat>
        <label>Command Snippet #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Command Snippets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>