force-app/main/default/objects/Command_Snippet__c/fields/Command_Snippet__c.field-meta.xml
<CustomField>
    <fullName>Command_Snippet__c</fullName>
    <label>Command Snippet</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>