force-app/main/default/objects/Command_Snippet__c/fields/Matching_Node__c.field-meta.xml
<CustomField>
    <fullName>Matching_Node__c</fullName>
    <label>Matching Node</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>