force-app/main/default/objects/Command_Snippet__c/fields/Prompt__c.field-meta.xml
<CustomField>
    <fullName>Prompt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prompt</label>
    <referenceTo>AI_Prompt__c</referenceTo>
    <relationshipLabel>Command Snippets</relationshipLabel>
    <relationshipName>Command_Snippets</relationshipName>
    <type>Lookup</type>
</CustomField>